# pythongrasshopperinterp

./: .gitignore  README.md  pyproject.toml
examples/: geometry.py  mini_truss.py  simple_math.py  truss2d.describe.txt  truss2d.ghx  truss2d.py
src/py2gh/: __init__.py  __main__.py  analyzer.py  cli.py  components.py  decompile.py  describe.py  emitter.py  geometry.py  ir.py  reader.py
tests/: conftest.py  ghx_util.py  reference_simple_math.ghx  test_analyzer.py  test_cli.py  test_emitter.py  test_expansion.py  test_geometry_toggle.py  test_golden.py  test_persistent_geometry.py  test_reverse.py  test_truss_example.py
tools/: harvest_components.py
